# End_to_End_Disease_Prediction_Project

./: Disease_Prediction.ipynb  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
Dataset/: Link.txt
Models/: desp_dataset_dict.json  precaution_dict.json
static/css/: style.css
static/js/: main.js
templates/: home.html  predict.html
